// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/SmallModal With Dangerous Content 1`] = `
<div
  className="max-w-md bg-white p-8 shadow-lg flex flex-col gap-8 place-content-between"
  style={
    Object {
      "minHeight": 360,
    }
  }
>
  <div>
    <h1
      className="text-3xl font-semibold m-0 mb-4 text-secondary"
    >
      Bitte bestätige die Löschung deines Accounts
    </h1>
    <p>
      Dein Account wird undwiederruflich gelöscht. Alle deine Projekte und Daten werden von der Platform und aus der Datenbank entfernt.
    </p>
  </div>
  <div
    className="flex gap-4 place-content-between"
  >
    <div
      className="block w-full text-right"
    >
      <button
        className="px-4 py-2 font-sans text-lg transition cursor-pointer focus-offset bg-white border border-secondary text-secondary hover:bg-secondary hover:bg-opacity-10 mr-4"
        type="button"
        variant="dangerous"
      >
        Löschen
      </button>
      <button
        className="px-4 py-2 font-sans text-lg transition cursor-pointer focus-offset bg-primary text-white hover:opacity-60"
        type="button"
        variant="primary"
      >
        Abbrechen
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI Elements/SmallModal With Footer Content 1`] = `
<div
  className="max-w-md bg-white p-8 shadow-lg flex flex-col gap-8 place-content-between"
  style={
    Object {
      "minHeight": 360,
    }
  }
>
  <div>
    <h1
      className="text-3xl font-semibold m-0 mb-4 text-primary"
    >
      Willkommen!
    </h1>
    <div>
      Du bist eingeloggt als:
      <div
        className="mt-1"
      >
        <span
          className="text-gray-300 mr-1"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
            />
          </svg>
        </span>
        <span
          className="text-gray-400"
        >
          user@usermail.com
        </span>
      </div>
    </div>
  </div>
  <div
    className="flex gap-4 place-content-between"
  >
    <div
      className="block w-full text-right"
    >
      <button
        className="px-4 py-2 font-sans text-lg transition cursor-pointer focus-offset bg-primary text-white hover:opacity-60"
        type="button"
        variant="primary"
      >
        Dein Profil
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI Elements/SmallModal Without Footer Content 1`] = `
<div
  className="max-w-md bg-white p-8 shadow-lg flex flex-col gap-8 place-content-between"
  style={
    Object {
      "minHeight": 360,
    }
  }
>
  <div>
    <h1
      className="text-3xl font-semibold m-0 mb-4 text-primary"
    >
      Gehe zu deinen E-Mails
    </h1>
    <p>
      Wir haben dir eine E-Mail mir einem Anmeldungs-Link geschickt. Klicke den Link an, um dich einzuloggen.
    </p>
  </div>
</div>
`;
